# nepeval-ocr

./: .gitignore  README.md  easyocr_gpu.ipynb  generate_notebooks.py  paddleocr_gpu.ipynb  pyproject.toml  surya_gpu.ipynb  tesseract_gpu.ipynb  test_mock_tesseract.py
scripts/: run_openai_compatible_api_benchmarks.py  run_tesseract_benchmark.py  run_unified_benchmark.py  summarize_ocr_results.py
src/nepeval_ocr/: __init__.py  dataset.py  scorers.py
src/nepeval_ocr/adapters/: __init__.py  base.py  openai_api.py  surya.py  tesseract.py  trocr.py
